Revision to exercise prompts.  Chose easier-to-remember variable names and created more empty cells.

--- a/lessons/thw-python/vars-types/exercises.ipynb
+++ b/lessons/thw-python/vars-types/exercises.ipynb
@@ -13,7 +13,7 @@
      "source": [
       "# Exercise 1\n",
       "\n",
-      "Assign three variables, called experimentnumber, softwareversion, and thenumberten with the values 1, 5, and \"ten\" with the types int, float, and string respectively."
+      "Assign three variables, called `myinteger`, `myfloat`, and `mystring` with the values 3, 5, and \"ten\" with the types int, float, and string respectively."
      ]
     },
     {
@@ -30,9 +30,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print experimentnumber\n",
-      "print softwareversion\n",
-      "print thenumberten"
+      "print myinteger\n",
+      "print myfloat\n",
+      "print mystring"
      ],
      "language": "python",
      "metadata": {},
@@ -49,9 +49,9 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "print type(experimentnumber) == int\n",
-      "print type(softwareversion) == float\n",
-      "print type(thenumberten) == str"
+      "print type(myinteger) == int\n",
+      "print type(myfloat) == float\n",
+      "print type(mystring) == str"
      ],
      "language": "python",
      "metadata": {},
@@ -63,26 +63,14 @@
      "source": [
       "# Exercise 2 \n",
       "\n",
-      "The operations * and + are defined for some combinations of data types, but not for others.  Determine which of these operations gives an error.  Any surprises?  \n",
-      "\n",
-      "  int * float : \n",
-      "\n",
-      "  int * string :\n",
-      "\n",
-      "  float * string :\n",
-      "\n",
-      "  string + float  :\n",
-      "  \n",
-      "  string + string : \n",
-      "\n",
-      "Any surprises?"
+      "The operations * and + are defined for some combinations of data types, but not for others.  Determine which of these operations gives an error.  Any surprises?  "
      ]
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
-      " "
+      "myint * myfloat "
      ],
      "language": "python",
      "metadata": {},
@@ -92,8 +80,68 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "int * string :"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "float * string :"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "string + float  :"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "string + string : "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "# Exercise 3\n",
-      "5. Assign the string `thethreeitems` the value of \"1, 5, and ten\" **using the contents of the three variables defined above** (  `experimentnumber`, `softwareversion`, and `thenumberten`)    (Hint: you may need to coerce data types)"
+      "5. Assign the string `thethreeitems` the value of \"3, 5, and ten\" **using the contents of the three variables defined above** (  `myinteger`, `myfloat`, and `mystring`)    (Hint: You need to get everything into the `str` data type.  You may need to coerce some data types.)"
      ]
     },
     {
@@ -117,7 +165,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "print thethreeitems == \"1, 5, and ten\""
+      "print thethreeitems == \"3, 5, and ten\""
      ],
      "language": "python",
      "metadata": {},
@@ -129,7 +177,7 @@
      "source": [
       "# Exercise 4\n",
       "\n",
-      "len() is a builtin function to count the length of things, particularly lists and strings.  Find the length of `thethreeitems`, and determine whether it is the length or the length -1."
+      "`len()` is a builtin function to count the length of things, particularly lists and strings.  Find the length of `thethreeitems`, and determine whether it is the length or the length -1."
      ]
     },
     {
@@ -249,7 +297,7 @@
      "source": [
       "# Exercise 5\n",
       "\n",
-      "5A. Write an expression to determine the number of digits in a non-negative integer.  Hint:  maybe **len()** or **math.log()** might be useful here."
+      "Write an expression to determine the number of digits in a non-negative integer.  Hint:  maybe **len()** or **math.log()** might be useful here."
      ]
     },
     {
@@ -266,7 +314,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "5B. Test your expression on 45, 2, and 2.0.  Does it work for all three?"
+      "Test your expression on 45, 2, and 2.0.  Does it work for all three?"
      ]
     },
     {
