Removed is from boolean operators

--- a/lessons/thw-python/data-structures/data_structures.ipynb
+++ b/lessons/thw-python/data-structures/data_structures.ipynb
@@ -393,6 +393,48 @@
      "outputs": []
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "To actually make a copy of a list or a dict, we the `list()` and `dict()` builtin methods will do that."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = [1, 2]\n",
+      "b = list(a)\n",
+      "a.append(10)\n",
+      "print a\n",
+      "print b"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As a diagnostic tool, if you are ever uncertain if an assignment is making two different variables, \n",
+      "you can test whether two variables are actually distinct with the `is` operator:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a is b"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
