Changed to markdown cell, copyedit

--- a/lessons/thw-python/data-structures/data_structures.ipynb
+++ b/lessons/thw-python/data-structures/data_structures.ipynb
@@ -393,14 +393,11 @@
      "outputs": []
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "To actually make a copy of a list or a dict, we the `list()` and `dict()` builtin methods will do that."
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "To actually make a copy of a list or a dict, use the `list()` and `dict()` builtin methods."
+     ]
     },
     {
      "cell_type": "code",
