--- a/lessons/swc-python/python-08-numpy.ipynb
+++ b/lessons/swc-python/python-08-numpy.ipynb
@@ -1618,7 +1618,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Floating point arithmetic"
+      "Floating Point Arithmetic"
      ]
     },
     {
@@ -1635,7 +1635,7 @@
       "\n",
       "has value 0/2 + 0/4 + 1/8. These two fractions have identical values, the only difference being that the first is written in base 10 fractional notation, and the second in base 2.\n",
       "\n",
-      "Unfortunately, most decimal fractions cannot be represented exactly as binary fractions. As a consequence, the decimal floating-point numbers you enter are generally only approximated by the binary floating-point numbers actually stored in the machine. It\u2019s easy to forget that the stored value is an approximation to the original decimal fraction, because of the way that floats are displayed at the interpreter prompt. Python only prints a decimal approximation to the true decimal value of the binary approximation stored by the machine. If Python were to print the true decimal value of the binary approximation stored for 0.1, it would have to display\n",
+      "Unfortunately, most numbers cannot be represented exactly as fractions in any base, decimal or binary. As a consequence, the decimal floating-point numbers you enter are generally only approximated by the binary floating-point numbers actually stored in the machine. It\u2019s easy to forget that the stored value is an approximation, because of the way that floats are displayed at the interpreter prompt. Python only prints a decimal approximation to the true decimal value of the binary approximation stored by the machine. If Python were to print the true decimal value of the binary approximation stored for 0.1, it would have to display\n",
       "\n",
       "0.1000000000000000055511151231257827021181583404541015625\n",
       "\n",
@@ -1736,7 +1736,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This result brings us to the first rule of floating point arithmetic: never use `==` (or `!=`) on floating point numbers. Instead, it is better to check whether two values are within some tolerance, and if they are, treat them as equal. NumPy provides some very convenient tools for doing this, which typically allow you to define the tolerance in terms of the absolute and/or relative error. The [absolute error](glossary.html#aboslute-error) in some approximation is simply the absolute value of the difference between the actual value and the approximation. The [relative error](glossary.html#relative-error), on the other hand, is the ratio of the absolute error to the value we're approximating. For example, if we're off by 1 in approximating 8+1 and 56+1, the absolute error is the same in both cases, but the relative error in the first case is 1/9 = 11%, while in the second case it is only 1/57 = 1.7%. When we're thinking about floating point numbers, relative error is almost always more useful than absolute error. After all, it makes little sense to say that we're off by a hundreth when the value in question is a billionth. \n",
+      "This result brings us to the first rule of floating point arithmetic: never use `==` (or `!=`) on floating point numbers. Instead, it is better to check whether two values are within some tolerance, and if they are, treat them as equal. NumPy provides some very convenient tools for doing this, which typically allow you to define the tolerance in terms of the absolute and/or relative error. The [absolute error](glossary.html#aboslute-error) (`atol`) in some approximation is simply the absolute value of the difference between the actual value and the approximation. The [relative error](glossary.html#relative-error) (`rtol`), on the other hand, is the ratio of the absolute error to the value we're approximating. For example, if we're off by 1 in approximating 8+1 and 56+1, the absolute error is the same in both cases, but the relative error in the first case is 1/9 = 11%, while in the second case it is only 1/57 = 1.7%. When we're thinking about floating point numbers, relative error is almost always more useful than absolute error. After all, it makes little sense to say that we're off by a hundreth when the value in question is a billionth. \n",
       "\n",
       "Let's now go ahead and re-test `add_one_tenth`, using a NumPy method that checks whether two arrays are element-wise equal within a specified tolerance. More specifically, if the following equation is element-wise `True`, then `np.allclose` returns `True`.\n",
       "\n",
@@ -1808,7 +1808,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As expected, an input value of 1.0 gives the answer 0.0. However, what if we had derived the input value of 1.0 from an expression like the following:"
+      "As expected, an input value of 1.0 gives the answer 0.0. However, what if we had derived the input value of 1.0 from an expression like the following?"
      ]
     },
     {
@@ -1834,7 +1834,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The relative error associated with this expression is very small, however it's significant because arccosine is only defined over the range [-1.0,  1.0]. "
+      "The relative error associated with this expression is very small, however it's significant because arccosine is only defined over the range [-1.0,  1.0]. If we pass this derived input value to our simple trigonometic function, it now returns `nan`. This is NumPy's way of representing an undefined or unrepresentable value (and stands for \"not a number\").   "
      ]
     },
     {
@@ -1892,6 +1892,13 @@
       }
      ],
      "prompt_number": 28
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The moral of the story here is that floating point issues are often unique to the problem that you're working on. However, if you're aware of the common tools (e.g. `np.allclose`) and techniques (e.g. never use `==`) for dealing with them, you can almost always come up with a solution."
+     ]
     },
     {
      "cell_type": "heading",
