fixed some formatting and grammer errors

--- a/lessons/swc-shell/student_edition.ipynb
+++ b/lessons/swc-shell/student_edition.ipynb
@@ -88,9 +88,9 @@
       "an important excel spreadsheet. So you call back to your lab, and direct someone\n",
       "to email you the excel document. What do you tell them? It's probably something like:\n",
       "\n",
-      "Double click on the \"Work_Stuff\" folder on my desktop, then choose the \"Project_1\" \n",
-      "folder, then click the \"datasheets\" folder, and my excel sheet is in there, \n",
-      "it's called \"super_important.xlsx\"\n",
+      "    \"Double click on the \"Work_Stuff\" folder on my desktop, then choose the \"Project_1\" \n",
+      "    folder, then click the \"datasheets\" folder, and my excel sheet is in there, \n",
+      "    it's called \"super_important.xlsx\"\"\n",
       "\n",
       "The folders and documents you've just described are what the UNIX shell calls\n",
       "'directories' and 'files' respectivly, and the collection of all of them is \n",
@@ -297,6 +297,7 @@
       "shorter was better! In this instance, `..` is a special directory name meaning \n",
       "\"the directory containing this one\", or, more succinctly, the [parent](glossary.html#parent-directory)\n",
       "of the current directory.\n",
+      "\n",
       "Any given directory probably has several directorys inside of it, so it would \n",
       "be difficult to give each one a shortcut and remember them all, but the \n",
       "creators of the shell came up with a clever solution, tab complete.\n",
@@ -418,7 +419,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "But this doesn't work! Instead we get an error!"
+      "But this doesn't work either! Instead we get an error!"
      ]
     },
     {
@@ -432,7 +433,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Why? Because the shell interpretes spaces as special characters, in this case, as the deliminators for command modifiers. It thinks you want to \"cd\" to \"home\" with the \"pictures/\" option, but `cd` doesn't have a pictures option, so it errors. This illustrates two important points: first, use tab complete as much as possible, and second, try to avoid spaces in file and directory names. To correctly change to the `home pictures` directory, we need to tell the shell that the space is not a special character, but is instead part of the file name. We do this by \"escaping\" out the space, which looks like this:"
+      "Why? Because the shell interpretes spaces as special characters, in this case, as the deliminators for command modifiers. It thinks you want to \"cd\" to \"home\" with the \"pictures/\" option, but `cd` doesn't have a pictures option, so it errors. This illustrates two important points: first, use tab complete as much as possible, and second, try to avoid spaces in file and directory names. To correctly change to the `home pictures` directory, we need to tell the shell that this particular space is not a special character, but is instead part of the file name. We do this by \"escaping\" out the space, which looks like this:"
      ]
     },
     {
@@ -453,7 +454,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    vlad$ cd /user/vlad\n",
+      "    vlad$ cd /user/vlad"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "    vlad$ mkdir my_new_directory\n",
       "    \n",
       "    vlad$ ls -F\n",
