--- a/lessons/thw-python/data-structures/data_structures.ipynb
+++ b/lessons/thw-python/data-structures/data_structures.ipynb
@@ -166,7 +166,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Or from the third item to the end"
+      "Slicing lists from the beginning until a given index or from a given index to the end \n",
+      "is so common a task that it has a shortcut.  If you omit the index to the left of \n",
+      "the colon, it is interpreted as 0.   If you omit the index to the right of the colon, \n",
+      "it is interpreted as `len(<list>)`.  So this expression takes all the elements starting \n",
+      "from the third and continuing to the end of the list:"
      ]
     },
     {
@@ -183,8 +187,19 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "and so on."
+      "Note: when taking slices, the elements returned **include** the **starting** index but **exclude** the **final** index.  "
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "voltages[0:len(voltages)]  # this expression gives the entire list.\n",
+      "voltages[:]                # and this is the shortcut for the above."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -226,7 +241,9 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltages.append(3.0)"
+      "print voltages\n",
+      "voltages.append(3.0)\n",
+      "print voltages"
      ],
      "language": "python",
      "metadata": {},
@@ -236,7 +253,9 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltages.append(4.0)"
+      "print voltages\n",
+      "voltages.append(4.0)\n",
+      "print voltages"
      ],
      "language": "python",
      "metadata": {},
@@ -263,7 +282,9 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "currents.extend([1.5, 2.0])"
+      "print currents\n",
+      "currents.extend([1.5, 2.0])\n",
+      "print currents"
      ],
      "language": "python",
      "metadata": {},
