Navigation notes for ipython

--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -198,7 +198,7 @@
      "source": [
       "**Shift-ENTER** executes and moves to the next cell.  \n",
       "\n",
-      "**Control-ENTER** executes and does *not* move to the next cell.  \n",
+      "**Control-ENTER** (**Cmd-ENTER** on Macs) executes the cell and does *not* move to the next cell.  \n",
       "\n",
       "Try entering this cell a few times:  "
      ]
@@ -218,7 +218,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If you want to create new empty cells, it's three keys: **Shift-Enter**, **Control-M**, and then  **a**  This will insert more cells in the middle of the notebook. "
+      "If you want to create new empty cells, you can use Insert -> Insert Cell Below or use the Insert Cell Below button at the top of the notebook.
      ]
     },
     {
