--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -1,4 +1,4 @@
-{
+{ 
  "metadata": {
   "name": "variables"
  },
@@ -218,7 +218,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If you want to create new empty cells, you can use Insert -> Insert Cell Below or use the Insert Cell Below button at the top of the notebook.
+      "If you want to create new empty cells, you can use Insert -> Insert Cell Below or use the Insert Cell Below button at the top of the notebook."
      ]
     },
     {
@@ -304,11 +304,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Hrm.  Ahem.\n",
-      "\n",
+      "Hrm.  Ahem."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "## Executing code in files\n",
-      "\n",
-      "\n",
       "\n",
       "If your code is in a file, you can execute it from the IPython shell with the **%run** command. Execute hello.py like so"
      ]
@@ -480,13 +483,13 @@
      "source": [
       "Python is a dynamically typed language (unlike, say, C++). If you know what that means, you may be feeling some fear and loathing right now. If you don't know what dynamic typing means, the next stuff may seem esoteric and pedantic. Its actually important, but its importance may not be clear to you until long after this class is over.\n",
       "\n",
-      "\n",
-      "\n",
+
+
       "Dynamic typing means that you don't have to declare the type of a variable when you define it; python just figures it out based on how you are setting the variable. Lets say you set a variable. Sometime later you can just change the type of data assigned to a variable and python is perfectly happy about that. Since it won't be obvious until (possibly much) later why that's important, I'll let you marinate on that idea for a second. \n",
+
+
       "\n",
-      "\n",
-      "\n",
-      "Here's an example of dynamic typing. What's the type of data assigned to voltage?"
+      "Here's an example of dynamic typing. What's the type of data assigned to `voltage`?"
      ]
     },
     {
@@ -576,7 +579,7 @@
      "source": [
       "## Exercise\n",
       "\n",
-      "Assign three variables, called versionnumber, numberofpythons, and thenumberten with the values 2, 6, and \"ten\" with the types float, int, and string respectively."
+      "Assign three variables, called `versionnumber`, `numberofpythons`, and `thenumberten` with the values 2, 6, and \"ten\" with the types float, int, and string respectively."
      ]
     },
     {
@@ -723,9 +726,9 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
-      "resistance_string = \"4.0 ohms\""
+      "resistance_string = \"4.0 Ohms\""
      ],
      "language": "python",
      "metadata": {},
@@ -1030,11 +1033,7 @@
      "source": [
       "**ZING!**\n",
       "\n",
-      "\n",
-      "\n",
       "This is why type is important. Divding two integers returnes an integer: this operation calculates the quotient and floors the result to get the answer.\n",
-      "\n",
-      "\n",
       "\n",
       "If everything was a float, the division is what you would expect."
      ]
@@ -1167,7 +1166,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There are other operations deined on string data. Use the *dir* comnand to find them. One example I'll show is the upper method. Lets take a look at the documentation."
+      "There are other operations deined on string data. Use the `dir` comnand to find them. One example I'll show is the upper method. Lets take a look at the documentation."
      ]
     },
     {
