Recited meanings of three fundamental data types.

--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -1,4 +1,4 @@
-{ 
+{
  "metadata": {
   "name": "variables"
  },
@@ -442,9 +442,15 @@
      "source": [
       "## Types and Dynamic Typing\n",
       "\n",
-      "Like most programming languages, things in python are typed. The type refers to the type of data. We've already defined three different types of data in experiment, voltage, and current. The types are string, integer, and float. You can inspect the type of a variable by using the `type` command.\n",
+      "Like most programming languages, things in python are typed.  Data types reflect the way that the data is ultimately stored as ones and zeroes and affect the operations that are permitted on the data.   We have already defined three different variables: `experiment`, `voltage`, and `current`.  They are stored in three different data types:  `string`, `integer`, and `float`. \n",
       "\n",
-      "Why should you care about data types?  In some cases, failing to pay attention to the data types will cause wrong answers."
+      "* `string` data types are for lists of consecutive characters, such as text.  \n",
+      "* `int` data types are exact representations of the integers.  \n",
+      "* `float` data types, short for floating point numbers, are inexact representations of numbers that are internally stored in scientific notation.\n",
+      "\n",
+      "There are many other data types, but these are fundamental.\n",
+      "\n",
+      "You can inspect the type of a variable by using the `type` command."
      ]
     },
     {
@@ -481,13 +487,20 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Python is a dynamically typed language (unlike, say, C++). If you know what that means, you may be feeling some fear and loathing right now. If you don't know what dynamic typing means, the next stuff may seem esoteric and pedantic. Its actually important, but its importance may not be clear to you until long after this class is over.\n",
+      "Why should you care about data types?  In some cases, **failing to pay attention to the data types will cause wrong answers**."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Python is a dynamically typed language (unlike, say, C++). \n",
       "\n",
-
-
-      "Dynamic typing means that you don't have to declare the type of a variable when you define it; python just figures it out based on how you are setting the variable. Lets say you set a variable. Sometime later you can just change the type of data assigned to a variable and python is perfectly happy about that. Since it won't be obvious until (possibly much) later why that's important, I'll let you marinate on that idea for a second. \n",
-
-
+      "Dynamic typing means that you don't have to declare the type of a variable \n",
+      "when you define it; python just figures out the fundamental data type based \n",
+      "on how you set the variable. Lets say you set a variable. Sometime later you \n",
+      "can just change the type of data assigned to a variable and python is \n",
+      "perfectly happy about that. \n",
       "\n",
       "Here's an example of dynamic typing. What's the type of data assigned to `voltage`?"
      ]
@@ -591,6 +604,13 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This cell prints the values, so you can check if the values are what you expect:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -606,7 +626,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Test your work.  Run the following three expressions."
+      "Test your work.  Run the following three expressions.  If all three evaluate as `True` you have set the data types correctly."
      ]
     },
     {
@@ -1033,7 +1053,7 @@
      "source": [
       "**ZING!**\n",
       "\n",
-      "This is why type is important. Divding two integers returnes an integer: this operation calculates the quotient and floors the result to get the answer.\n",
+      "This is why type is important. Divding two integers returnes an integer: this operation calculates the integer part of the quotient and discards the remainder.\n",
       "\n",
       "If everything was a float, the division is what you would expect."
      ]
@@ -1119,7 +1139,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "When concatenating strings, we must explicitly use the concatenation operator +.  Computers don't understand context."
+      "When concatenating strings, we must explicitly use the concatenation operator `+` which takes two strings and creates one longer string."
      ]
     },
     {
