Typos and markup in new sentences

--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -497,9 +497,9 @@
       "Python is a dynamically typed language (unlike, say, C++). \n",
       "\n",
       "Dynamic typing means that you don't have to declare the type of a variable \n",
-      "when you define it; python just figures out the fundamental data type based \n",
+      "when you define it; Python just figures out the fundamental data type based \n",
       "on how you set the variable. Lets say you set a variable. Sometime later you \n",
-      "can just change the type of data assigned to a variable and python is \n",
+      "can just change the type of data assigned to a variable and Python is \n",
       "perfectly happy about that. \n",
       "\n",
       "Here's an example of dynamic typing. What's the type of data assigned to `voltage`?"
@@ -1052,7 +1052,7 @@
      "source": [
       "**ZING!**\n",
       "\n",
-      "This is why type is important. Divding two integers returnes an integer: this operation calculates the integer part of the quotient and discards the remainder.\n",
+      "This is why type is important. Dividing two integers returnes an integer: this operation calculates the integer part of the quotient and discards the remainder.\n",
       "\n",
       "If everything was a float, the division is what you would expect."
      ]
@@ -1185,7 +1185,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There are other operations deined on string data. Use the `dir` comnand to find them. One example I'll show is the upper method. Lets take a look at the documentation."
+      "There are other operations defined on string data. Use the `dir` comnand to find them. One example I'll show is the `.upper()` method. Lets take a look at the documentation."
      ]
     },
     {
