Fixed the copious spelling errors

--- a/lessons/swc-shell/shell-overview.ipynb
+++ b/lessons/swc-shell/shell-overview.ipynb
@@ -108,7 +108,7 @@
       "\n",
       "Instead, you could also use the 'absolute path':\n",
       "\n",
-      "    /Users/Amanda/Desktop/Work_Stuff/Project_1/datasheets/super_important.xlsx\n",
+      "    /users/Amanda/Desktop/Work_Stuff/Project_1/datasheets/super_important.xlsx\n",
       "\n",
       "This path is 'absolute' because it always starts from the same place: your 'root directory'.\n",
       "Root is the top directory in your computer, everything else: every other file and directory\n",
@@ -173,7 +173,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Here, the computer's response is `/users/vlad`, which is Vlad's [home directory](glossary.html#home-directory). This is where the operating system stores all the files and directories that belong to Vlad. To see what is in Vlads'\n",
+      "Here, the computer's response is `/users/vlad`, which is Vlad's [home directory](glossary.html#home-directory). This is where the operating system stores all the files and directories that belong to Vlad. To see what is in Vlad's\n",
       "home directory, we would ask the computer to list all the entries with the command `ls` (\"list\")"
      ]
     },
@@ -193,11 +193,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Notice that only six directorys are visible, even though there may be hundreds of directorys on Vlads computer.\n",
+      "Notice that only six directories are visible, even though there may be hundreds of directories on Vlad's computer.\n",
       "Working in the shell behaves in exactly the same way as navigating through your file system by pointing and clicking:\n",
       "you can only see the directories and files that are in your current directory. By extension, you can also only _work with_\n",
-      "the directories and files in your current directory unless you specify thier path. If we `cd` or \"change directories\"\n",
-      "to the Movies directory:\n"
+      "the directories and files in your current directory unless you specify their path. If we `cd` or \"change directories\"\n",
+      "to the `Movies` directory:\n"
      ]
     },
     {
@@ -230,7 +230,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "we can now see Vlad's movies. `cd` moved us into the \"Movies\" directory, and now we only see the files and directories inside of it. \n",
+      "we can now see Vlad's movies. `cd` moved us into the `Movies` directory, and now we only see the files and directories inside of it. \n",
       "One other thing to note from Vlad's movies is the 'file extensions', the letters after the '.' on most files. File extensions are an easy way for you to guess what type of file you're looking at, but aren't actually necessary. It is considered a 'best practice' to include file extensions on your files, but your computer will happily play the movie `I_am_legend`, even if we changed the file extension to `.xlsx`. We can see why file extensions are a best practise by looking at `kids_movies`. Is that a movie title that's missing an extension? Or a directory full of more movies? We can check this using a 'flag' for `ls`. A 'flag' is an extra modifier you issue after the command to run `ls`. You can find an exhaustive list of the modifiers for `ls`, or almost any other command by looking in the manual `man ls`, but for now, let's just use `-F`, which adds a `/` after any directory."
      ]
     },
@@ -255,7 +255,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can also try this on other directorys, as long as we specify the path. For instance, we can check out Vlad's home directory using an absolute path:"
+      "We can also try this on other directories, as long as we specify the path. For instance, we can check out Vlad's home directory using an absolute path:"
      ]
     },
     {
@@ -298,7 +298,7 @@
       "\"the directory containing this one\", or, more succinctly, the [parent](glossary.html#parent-directory)\n",
       "of the current directory.\n",
       "\n",
-      "Any given directory probably has several directorys inside of it, so it would \n",
+      "Any given directory probably has several directories inside of it, so it would \n",
       "be difficult to give each one a shortcut and remember them all, but the \n",
       "creators of the shell came up with a clever solution, tab complete.\n",
       "Let's `cd` back to Vlad's home directory to see how it works:"
@@ -333,7 +333,7 @@
      "metadata": {},
      "source": [
       "    vlad$ cd D\n",
-      "If we type `tab` twice instead of typing the rest of the word, the shell will try to guess where we want to go. If it can't decide, the shell will present us with all the available options. Since Vlad's home directory has more than one file or directory that starts with \"D\", the shell provides all the files and directorys that start with \"D\":"
+      "If we type `tab` twice instead of typing the rest of the word, the shell will try to guess where we want to go. If it can't decide the shell will present us with all the available options. Since Vlad's home directory has more than one file or directory that starts with \"D\", the shell provides all the files and directories that start with \"D\":"
      ]
     },
     {
@@ -348,7 +348,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We want to go to Vlad's desktop, so we type an \"e\" and then type `tab` twice more:"
+      "We want to go to Vlad's desktop, so we type an \"e\" and then type `tab` once more:"
      ]
     },
     {
@@ -364,7 +364,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The shell has guessed that \"De\" means we want \"Desktop\" and filled in the rest. To see what is available now, we can tap `tab` twice more, or we can add a \"W\" because we know the file we're looking for is in the `Work_Stuff` directory. In this way we can wind our way down the path with a minimum of typeing. But this isn't just a way to move our fingers less! Tab complete greatly minimizes error and the most common frustrations of learning the shell. Let's say that in our last example, we just pushed `Enter` instead of continuing down the path to our excel file, and now we're just in the `Desktop` directory:"
+      "The shell has guessed that \"De\" means we want \"Desktop\" and filled in the rest. To see what is available now, we can tap `tab` again, or we can add a \"W\" because we know the file we're looking for is in the `Work_Stuff` directory. In this way we can wind our way down the path with a minimum of typeing. But this isn't just a way to move our fingers less! Tab complete greatly minimizes error and the most common frustrations of learning the shell. Let's say that in our last example, we just pushed `Enter` instead of continuing down the path to our excel file, and now we're just in the `Desktop` directory:"
      ]
     },
     {
@@ -376,7 +376,7 @@
       "\n",
       "    vlad$ ls -F\n",
       "\n",
-      "    grant_Proposal.doc   phone_backup   Project_2/\n",
+      "    grant_Proposal/   phone_backup   Project_2/\n",
       "    home pictures/       Project_1/"
      ]
     },
@@ -391,14 +391,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    vlad$ grant_proposal.doc"
+      "    vlad$ cd grant_proposal/"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, this won't get us anywhere! This is because the shell is case sensitive, so it thinks grant_Proposal.doc and grant_proposal.doc are completely different things! If we tab complete, this is easy to avoid, because when we type \"g\" and tab complete, the shell fills in the capital letters appropriatly."
+      "However, this won't get us anywhere! This is because the shell is case sensitive, so it thinks `grant_Proposal.doc` and `grant_proposal.doc` are completely different things! If we tab complete, this is easy to avoid, because when we type \"g\" and tab complete, the shell fills in the capital letters appropriatly."
      ]
     },
     {
@@ -533,7 +533,7 @@
       "<em>\n",
       "    Everything we have seen so far works on Unix and its descendents, such\n",
       "    as Linux and Mac OS X. Things are a bit different on Windows. A typical\n",
-      "    directory path on a Windows 7 machine might be `C:\\Users\\vlad`. The\n",
+      "    directory path on a Windows machine might be `C:\\Users\\vlad`. The\n",
       "    first part, `C:`, is a [drive letter](glossary.html#drive-letter) that\n",
       "    identifies which disk we're talking about. This notation dates back to\n",
       "    the days of floppy drives; today, different \"drives\" are usually\n",
