fixed 'grant_proposal' directory errors

--- a/lessons/swc-shell/shell-overview.ipynb
+++ b/lessons/swc-shell/shell-overview.ipynb
@@ -398,7 +398,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, this won't get us anywhere! This is because the shell is case sensitive, so it thinks `grant_Proposal.doc` and `grant_proposal.doc` are completely different things! If we tab complete, this is easy to avoid, because when we type \"g\" and tab complete, the shell fills in the capital letters appropriatly."
+      "However, this won't get us anywhere! This is because the shell is case sensitive, so it thinks `grant_Proposal/` and `grant_proposal/` are completely different things! If we tab complete, this is easy to avoid, because when we type \"g\" and tab complete, the shell fills in the capital letters appropriatly."
      ]
     },
     {
