revert tab completion to 'twice'

--- a/lessons/swc-shell/shell-overview.ipynb
+++ b/lessons/swc-shell/shell-overview.ipynb
@@ -348,7 +348,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We want to go to Vlad's desktop, so we type an \"e\" and then type `tab` once more:"
+      "We want to go to Vlad's desktop, so we type an \"e\" and then type `tab` twice more:"
      ]
     },
     {
