Added link to documentation on lists

--- a/lessons/thw-python/data-structures/data_structures.ipynb
+++ b/lessons/thw-python/data-structures/data_structures.ipynb
@@ -205,6 +205,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "The [Python documentation--An informal Introduction to Python](http://docs.python.org/2/tutorial/introduction.html#lists) contains more examples and more details about how to create and access instances of this utilitarian data structure."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "### Append and Extend\n",
       "\n",
       "Just like strings have methods, lists do too."
